# class-reservation

./: .gitignore  Cargo.toml  README.md  RUN.md  build.sh  compose.yaml  run-local.sh
backend/: .env  Cargo.toml  Dockerfile  Rocket.toml
backend/migrations/2023-11-04-052821_create_classes/: down.sql  up.sql
backend/migrations/2023-11-04-052828_create_students/: up.sql
backend/migrations/2023-11-04-055634_create_classes_students/: down.sql  up.sql
backend/migrations/2023-11-04-181345_create_teachers/: up.sql
backend/migrations/2023-11-04-181353_create_classes_teachers/: down.sql  up.sql
backend/migrations/2023-11-21-163735_create_dormitories/: down.sql  up.sql
backend/migrations/2023-11-21-163742_create_rooms/: up.sql
backend/migrations/2023-11-21-163757_create_dormitories_rooms/: down.sql  up.sql
backend/migrations/2023-11-21-163827_create_rooms_students/: down.sql  up.sql
backend/migrations/2023-11-23-002347_rooms_students_holds/: down.sql  up.sql
backend/migrations/2023-11-23-002409_rooms_students_reservations/: down.sql  up.sql
backend/src/: class_routes.rs  course_subjects.csv  dormitories.csv  main.rs  models.rs  routes_dorms.rs  routes_rooms.rs  routes_rooms_reservation.rs  routes_students.rs  schema.rs  tests.rs
backend/static/: index.html
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: component_dorms.rs  component_login.rs  component_navbar.rs  component_rooms.rs  dorm_figures.csv  main.rs
