[package]
name = "class-reservation"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Orave <oravep@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/linkion/class-reservation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "backend",
  "frontend",
]