[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls", "json"] }
diesel = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"

