[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.192"
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.4"
wasm-bindgen-futures = "0.4"
yew-bootstrap = "0.8"