[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.192"
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.4"
wasm-bindgen-futures = "0.4"
yew-bootstrap = "0.8"
wasm-bindgen = "0.2.*"
web-sys = { version = "0.3.*", features = ["HtmlTextAreaElement", "HtmlSelectElement"] }
gloo-storage = "0.3.0"
gloo = "0.10.0"
